# envs_project_template

./: .gitignore  CMakeLists.txt  README.md
modules/module_add/: CMakeLists.txt
resources/docker/: Dockerfile-runner-cpt  Dockerfile-runner-dev  Dockerfile-u20  ubuntu_base  ubuntu_dev
tests/: CMakeLists.txt
tests/test_module_add/: CMakeLists.txt
